# sql2graph

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
config/: README.md
config/ddl/: tpch.sql
config/mappings/: ldbc.yaml  tpch.yaml
config/models/: anthropic.yaml  ollama.yaml
config/servers/: arangodb.yaml  gremlin.yaml  neo4j.yaml
demo/: README.md  cli.py
demo/queries/: ldbc.sql  tpch.sql
docs/: API.md  ARCHITECTURE.md  EXTENDING.md  LDBC_NORMALIZATION.md  MAPPING_BUILDER.md  README.md  SYNTAX_VALIDATION.md  TROUBLESHOOTING.md  api.md  architecture.md  configuration.md  extending.md  getting-started.md  troubleshooting.md
docs/mapping/: authoring.md  builder.md  format.md  ldbc-normalization.md
docs/validation/: modes.md  syntax.md
eval/: METRICS.md  README.md
eval/analysis/: gremlin_results.md
eval/gold/: ldbc.yaml
eval/harness/: __init__.py  arango_edges.py  canonical.py  components.py  config.py  datasets.py  distances.py  execution.py  frames.py  plots.py  pricing.py  records.py  report.py  runner.py
eval/notebooks/: 00_setup.ipynb  01_translation_run.ipynb  02_behavioural_metrics.ipynb  03_structural_metrics.ipynb  04_distance_metrics.ipynb  05_execution_metrics.ipynb  06_report.ipynb
eval/outputs/: metrics_behavioural.csv  records_ldbc_aql_gemma4_26b.json  records_ldbc_cypher_qwen3-coder_30b.json  records_ldbc_gremlin_claude-opus-4-8.json  records_ldbc_gremlin_qwen3-coder_30b.json
eval/outputs/metrics/: metrics_behavioural.csv  metrics_distance.csv  metrics_execution.csv  metrics_structural.csv
eval/outputs/records/: records_ldbc_aql_claude-opus-4-8-thinking.json  records_ldbc_aql_claude-opus-4-8.json  records_ldbc_aql_gemma4_26b.json  records_ldbc_aql_llama3.2_latest.json  records_ldbc_aql_qwen3-coder_30b.json  records_ldbc_cypher_claude-opus-4-8-thinking.json  records_ldbc_cypher_claude-opus-4-8.json  records_ldbc_cypher_gemma4_26b.json  records_ldbc_cypher_llama3.2_latest.json  records_ldbc_cypher_qwen3-coder_30b.json  records_ldbc_gremlin_claude-opus-4-8-thinking.json  records_ldbc_gremlin_claude-opus-4-8.json  records_ldbc_gremlin_gemma4_26b.json  records_ldbc_gremlin_llama3.2_latest.json  records_ldbc_gremlin_qwen3-coder_30b.json
eval/reports/: aql_results.md  cypher_results.md  final.md  gremlin_results.md  ldbc_gremlin_qwen3-coder_30b_q08.txt  ldbc_gremlin_qwen3-coder_30b_q15.txt
eval/scripts/: build_arango_unified_edges.py  validate_gold.py  validate_gold_gremlin.py  validate_gold_queries.py
evaluation/: MODEL_COMPARISON.md  README.md  build_arango_unified_edges.py  validate_gold_aql.py  validate_gold_queries.py
evaluation/datasets/: ldbc.yaml  tpch.yaml
evaluation/eval_harness/: canonical.py  config.py  datasets.py  pricing.py  runner.py
evaluation/notebooks/: 00_setup.ipynb  01_translation_run.ipynb  02_behavioural_metrics.ipynb  03_structural_metrics.ipynb  04_distance_metrics.ipynb  05_execution_metrics.ipynb  06_report.ipynb
evaluation/outputs/: metrics_behavioural.csv  metrics_distance.csv  metrics_execution.csv  metrics_structural.csv  records_ldbc_aql_claude-opus-4-8.json  records_ldbc_aql_qwen3-coder_30b.json  records_ldbc_cypher_claude-opus-4-8.json  records_ldbc_cypher_gemma4_26b.json  records_ldbc_cypher_llama3.2_latest.json  records_ldbc_cypher_qwen3-coder_30b.json  records_ldbc_gremlin_llama3.2_latest.json
evaluation/reports/: final.md
examples/: README.md
examples/ddl/: ldbc.sql  ldbc_naive.sql  tpch.sql
examples/mappings/: ldbc.yaml  tpch.yaml
examples/sql/ldbc/: q01.sql  q06.sql  q11.sql
examples/sql/tpch/: q03.sql  q06.sql  q12.sql
scripts/: check_doc_refs.py  generate_parsers.sh
src/rows2graph/: __init__.py  _env.py  async_translator.py  events.py  mapping.py  preflight.py  prompts.py  sql_features.py  state.py  translator.py
src/rows2graph/llm/: __init__.py  anthropic.py  ollama.py  usage.py
src/rows2graph/mapping_builder/: __init__.py  ddl.py  diff.py  naming.py  project.py  refine.py  relational.py  serialize.py  sql_types.py
src/rows2graph/targets/: __init__.py  _schema.py  aql.py  cypher.py  gremlin.py
src/rows2graph/validators/: __init__.py  noop.py
src/sql2graph/: __init__.py  _env.py  async_translator.py  events.py  mapping.py  preflight.py  prompts.py  sql_features.py  state.py  translator.py
src/sql2graph/engine/: __init__.py  _loop.py  async_translator.py  events.py  preflight.py  prompts.py  state.py  translator.py
src/sql2graph/llm/: __init__.py  anthropic.py  ollama.py  usage.py
src/sql2graph/mapping_builder/: __init__.py  ddl.py  diff.py  naming.py  project.py  refine.py  (+3 more)
tests/: README.md  conftest.py  test_integration.py  test_mapping_builder.py  test_pricing.py  test_static.py
tests/eval/: conftest.py  test_arango_edges.py  test_config.py  test_execution_compare.py  test_frames.py  test_pricing.py  test_report.py
tests/integration/: conftest.py  test_anthropic.py  test_arango.py  test_managed.py  test_neo4j.py
tests/unit/: _doubles.py  conftest.py  test_doc_refs.py
(+71 files in other folders)
