[project]
name = "sql2graph"
version = "0.1.0"
description = "LLM-driven SQL-to-graph-database query translator with a generate-validate-fix loop."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Ivona Oboňová", email = "ivonaobonova@gmail.com" },
]
dependencies = [
    "ollama>=0.6.1",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "neo4j>=5.28",
    "python-arango>=8.0",
    "gremlinpython>=3.7",
    "anthropic>=0.96.0",
    "sqlglot>=23",
    "testcontainers[neo4j,arangodb]>=4.0",
    "antlr4-python3-runtime>=4.13,<4.14",
]

[project.optional-dependencies]
eval = [
    "apted>=1.0.3",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "psycopg[binary]>=3.2",
    "tabulate>=0.9",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.7",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling's src-layout discovery is unreliable without explicit package paths,
# so name them. The wheel exposes the `sql2graph` package at top level.
[tool.hatch.build.targets.wheel]
packages = ["src/sql2graph"]

[tool.ruff]
line-length = 120
output-format = "full"
# ANTLR-generated lexers/parsers are machine-generated; don't lint/format them.
extend-exclude = ["src/sql2graph/validators/_grammar/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "PERF", "ARG", "W", "UP", "B"]
ignore = ["E1", "E4", "E5", "PERF203"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.mypy]
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_unreachable = true

# gremlinpython ships no py.typed marker; treat its driver surface as
# Any rather than block strict-mode compilation across the package.
[[tool.mypy.overrides]]
module = "gremlin_python.*"
ignore_missing_imports = true

# testcontainers and the docker SDK ship no py.typed marker; treat their
# driver surface as Any rather than block strict-mode compilation.
[[tool.mypy.overrides]]
module = ["testcontainers.*", "docker.*"]
ignore_missing_imports = true

# antlr4-python3-runtime ships no py.typed marker; treat its surface as Any.
[[tool.mypy.overrides]]
module = "antlr4.*"
ignore_missing_imports = true

# ANTLR-generated parsers are machine-generated and not strict-clean; skip them.
[[tool.mypy.overrides]]
module = "sql2graph.validators._grammar.generated.*"
ignore_errors = true

# harness lives under eval/ (an optional extra, not the library src); the
# tests/eval suite adds it to sys.path at runtime. It ships no stubs, so treat
# its import surface as Any rather than fail strict-mode collection of the tests.
[[tool.mypy.overrides]]
module = "harness.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
# Integration tests are deselected by default: they call real LLMs and
# real databases, which costs money and requires services. Opt in with
# ``uv run pytest -m integration`` (or ``-m "integration or not integration"``
# to run everything). See tests/README.md for required env vars.
addopts = "--verbose -m 'not integration'"
testpaths = ["tests"]
markers = [
    "integration: tests that hit real LLMs or databases (slow, cost money)",
]
